toString útfært í Flight ofl smáatriði